# errex

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  errex.sh  package-lock.json  railway.toml
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  docker.yml
crates/errex-proto/: Cargo.toml
crates/errex-proto/src/: error.rs  event.rs  fingerprint.rs  issue.rs  lib.rs  wire.rs
crates/errex-proto/tests/: wire_format.rs
crates/errexd/: Cargo.toml
crates/errexd/migrations/: 20260101000001_init.sql  20260427000001_status.sql  20260427000002_projects.sql  20260427000003_webhook.sql  20260427000004_webhook_health.sql  20260427000005_users_sessions.sql  20260427000006_retention_settings.sql
crates/errexd/src/: auth.rs  config.rs  crypto.rs  digest.rs  error.rs  fingerprint.rs  ingest.rs  lockout.rs  main.rs  mcp.rs  metrics.rs  rate_limit.rs  retention.rs  spa.rs  store.rs  triage.rs  user_agent.rs  webhook.rs  ws.rs
crates/errexd/tests/: api.rs  concurrency.rs  store.rs
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md
docs/superpowers/plans/: 2026-04-26-app-shell-icon-redesign.md  2026-04-26-login-onboarding-painted.md  2026-04-26-test-event-button.md
docs/superpowers/specs/: 2026-04-26-app-shell-icon-redesign-design.md  2026-04-26-create-first-project-design.md  2026-04-26-login-onboarding-design.md  2026-04-26-test-event-button-design.md
scripts/: dev.sh  seed.sh  smoke.sh
scripts/stress/: .gitignore  BENCHMARK_LOG.md  Cargo.toml  REPORT.md  analyze.py  bench.sh  compare.py  multibench.sh  prod_test.sh  run.sh
scripts/stress/src/: main.rs
web/: package.json  tsconfig.json  vite.config.ts  vitest.config.ts
web/src/: app.css  app.html
web/src/lib/: actions.svelte.ts  actions.test.ts  admin.svelte.ts  admin.test.ts  aiContext.test.ts  aiContext.ts  api.test.ts  api.ts  auth.svelte.ts  auth.test.ts  bootstrap.test.ts  bootstrap.ts  eventDetail.test.ts  eventDetail.ts  eventStream.svelte.ts  filterUrl.test.ts  filterUrl.ts  issueOps.test.ts  issueOps.ts  projectsConsole.test.ts  projectsConsole.ts  queryBridge.test.ts  queryBridge.ts  queryParser.test.ts  queryParser.ts  retention.svelte.ts  retention.test.ts  savedFilters.svelte.ts  selection.ts  stores.svelte.ts  stores.test.ts  team.svelte.ts  testEvent.test.ts  testEvent.ts  toast.svelte.ts  types.ts  utils.test.ts  utils.ts  ws.test.ts  ws.ts
web/src/lib/components/: AuthShell.svelte  AuthShell.test.ts  Breadcrumbs.svelte  CommandPalette.svelte  ConnectionStatus.svelte  DeleteProjectModal.svelte  DsnSnippet.svelte  Freshness.svelte  HeaderStats.svelte  IssueDetail.svelte  IssueList.svelte  IssueList.test.ts  IssueListWrapper.svelte  IssueRow.svelte  KeyboardShortcuts.svelte  ProjectDetail.svelte  ProjectRail.svelte  ProjectSelector.svelte  Sparkline.svelte  StackFrame.svelte  StackTrace.svelte  Stepper.svelte  Stepper.test.ts  Tags.svelte  Toaster.svelte  UnifiedInput.svelte  UserDetail.svelte  UserRail.svelte
web/src/lib/components/ui/badge/: badge.svelte  index.ts
web/src/lib/components/ui/button/: button.svelte  index.ts
web/src/lib/components/ui/checkbox/: checkbox.svelte  index.ts
web/src/lib/components/ui/collapsible/: collapsible.svelte  index.ts
web/src/lib/components/ui/dialog/: dialog.svelte  index.ts
web/src/lib/components/ui/input/: index.ts  input.svelte
web/src/lib/components/ui/label/: index.ts  label.svelte
web/src/lib/components/ui/resizable/: index.ts  resizable.svelte
web/src/lib/components/ui/select/: index.ts  select.svelte
web/src/lib/components/ui/separator/: index.ts
web/src/lib/components/ui/skeleton/: index.ts  skeleton.svelte
web/src/lib/components/ui/switch/: index.ts  switch.svelte
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/src/routes/issues/[id]/: +page.svelte  +page.ts
web/src/routes/login/: +page.svelte
web/src/routes/projects/: +layout.svelte  +page.svelte
web/src/routes/projects/[name]/: +page.svelte
web/src/routes/settings/: +page.svelte
web/src/routes/settings/retention/: +page.svelte
web/src/routes/setup/: +page.svelte
web/src/routes/team/: +layout.svelte  +page.svelte
web/src/routes/team/[username]/: +page.svelte
web/src/test/: setup.ts
web/src/test/app-stubs/: environment.ts  navigation.ts
