[workspace]
resolver = "2"
members = [
    "crates/errex-proto",
    "crates/errexd",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.38", features = ["full"] }
futures-util = "0.3"

# HTTP / WebSocket. axum's `ws` feature exposes WebSocketUpgrade so the
# fan-out server shares the HTTP listener instead of opening a second port.
# tokio-tungstenite stays in the dev-dep matrix for tests that drive the
# server with a real client (and is still pulled in transitively).
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.21"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
hyper = "1"

# Embedded SPA assets
rust-embed = { version = "8", features = ["mime-guess", "interpolate-folder-path"] }
mime_guess = "2"

# Outbound webhook deliveries. Minimal reqwest: rustls-tls for HTTPS to
# Slack/Discord/Teams without dragging in OpenSSL, plus the JSON helper.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Storage
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Compression (Sentry envelopes are commonly gzipped)
flate2 = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors
thiserror = "1"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Misc
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Auth
# argon2id for password hashing — small, no external C deps, OWASP-blessed
# defaults. We don't add the rand dep separately because argon2's default
# rng (`OsRng`) covers session id generation too via the `password-hash`
# crate it re-exports.
argon2 = "0.5"
password-hash = { version = "0.5", features = ["alloc"] }

# Internal
errex-proto = { path = "crates/errex-proto" }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
# `panic = "abort"` removes the unwind tables a daemon never uses
# (we have no `catch_unwind` boundary, panics indicate broken
# invariants and the supervisor should restart). Shrinks the binary
# meaningfully and lowers code-page RSS at idle.
panic = "abort"
