[workspace]
resolver = "2"
members = [
    "crates/errex-proto",
    "crates/errexd",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.38", features = ["full"] }
futures-util = "0.3"

# HTTP / WebSocket. axum's `ws` feature exposes WebSocketUpgrade so the
# fan-out server shares the HTTP listener instead of opening a second port.
# tokio-tungstenite stays in the dev-dep matrix for tests that drive the
# server with a real client (and is still pulled in transitively).
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.21"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "set-header"] }
hyper = "1"

# Embedded SPA assets
rust-embed = { version = "8", features = ["interpolate-folder-path"] }

# Outbound webhook deliveries. Hand-rolled hyper client instead of
# reqwest — Slack/Discord/Teams webhooks are fire-and-forget JSON POSTs
# and reqwest's builder/multipart/cookie/redirect machinery is dead
# weight at idle. hyper + hyper-rustls (ring + webpki-roots) is what
# reqwest reduces to once the unused features are stripped.
hyper-util = { version = "0.1", default-features = false, features = ["client-legacy", "tokio", "http1"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "tls12", "webpki-tokio", "webpki-roots", "ring"] }
http-body-util = "0.1"
url = "2"

# Storage
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Compression (Sentry envelopes are commonly gzipped)
flate2 = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }

# Errors
thiserror = "1"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Misc
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Auth
# argon2id for password hashing — small, no external C deps, OWASP-blessed
# defaults. We don't add the rand dep separately because argon2's default
# rng (`OsRng`) covers session id generation too via the `password-hash`
# crate it re-exports.
argon2 = "0.5"
password-hash = { version = "0.5", features = ["alloc"] }
# Constant-time byte comparison for token equality checks. Already pulled
# in transitively by argon2 / password-hash, declared explicitly so the
# usage doesn't break on a future major bump in those crates.
subtle = "2"

# Internal
errex-proto = { path = "crates/errex-proto" }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
# `panic = "abort"` removes the unwind tables a daemon never uses
# (we have no `catch_unwind` boundary, panics indicate broken
# invariants and the supervisor should restart). Shrinks the binary
# meaningfully and lowers code-page RSS at idle.
panic = "abort"
