[package]
name = "errexd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "errex error-tracking daemon: Sentry-SDK-compatible ingest, SQLite storage, WebSocket fan-out."

[[bin]]
name = "errexd"
path = "src/main.rs"

[dependencies]
errex-proto = { workspace = true }

tokio = { workspace = true }
futures-util = { workspace = true }

axum = { workspace = true }
tokio-tungstenite = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

rust-embed = { workspace = true }
mime_guess = { workspace = true }

reqwest = { workspace = true }

sqlx = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

argon2 = { workspace = true }
password-hash = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
http-body-util = "0.1"
