[package]
name = "errexd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "errex error-tracking daemon: Sentry-SDK-compatible ingest, SQLite storage, WebSocket fan-out."

[[bin]]
name = "errexd"
path = "src/main.rs"

[dependencies]
errex-proto = { workspace = true }

tokio = { workspace = true }
futures-util = { workspace = true }

axum = { workspace = true }
tokio-tungstenite = { workspace = true }
# `tower` only via `tower::ServiceExt::oneshot` in tests — kept in
# dev-dependencies but not in the production build.
tower-http = { workspace = true }

rust-embed = { workspace = true }
mime_guess = { workspace = true }

hyper = { workspace = true }
hyper-util = { workspace = true }
hyper-rustls = { workspace = true }
http-body-util = { workspace = true }
url = { workspace = true }

sqlx = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

argon2 = { workspace = true }
password-hash = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
